--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "react-tag-input": "^6.8.1",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2"
   },
