--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.7",
     "aos": "^2.3.4",
+    "apexcharts": "^4.4.0",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.7",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.7.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
