redesigned all three dashboard pages

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "byte-blitz-client"
+  },
+  "targets": {
+    "byte-blitz-client": {
+      "hosting": {
+        "default": [
+          "byte-blitz-client"
+        ]
+      }
+    }
   }
 }
